--- a/MotorCarlos/Engine/Engine/Engine.vcxproj.filters
+++ b/MotorCarlos/Engine/Engine/Engine.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="..\code\source\window.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="..\code\source\winmain.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\code\headers\window.h">
