--- a/MotorCarlos/Engine/Engine/Engine.vcxproj
+++ b/MotorCarlos/Engine/Engine/Engine.vcxproj
@@ -19,11 +19,14 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\code\source\entity.cpp" />
     <ClCompile Include="..\code\source\main.cpp" />
+    <ClCompile Include="..\code\source\scene.cpp" />
     <ClCompile Include="..\code\source\window.cpp" />
-    <ClCompile Include="..\code\source\winmain.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\code\headers\entity.h" />
+    <ClInclude Include="..\code\headers\scene.h" />
     <ClInclude Include="..\code\headers\window.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
