--- a/MotorCarlos/Engine/Engine/Engine.vcxproj
+++ b/MotorCarlos/Engine/Engine/Engine.vcxproj
@@ -19,15 +19,18 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\code\headers\transform.cpp" />
     <ClCompile Include="..\code\source\entity.cpp" />
     <ClCompile Include="..\code\source\main.cpp" />
     <ClCompile Include="..\code\source\scene.cpp" />
     <ClCompile Include="..\code\source\window.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\code\headers\entity.h" />
-    <ClInclude Include="..\code\headers\scene.h" />
-    <ClInclude Include="..\code\headers\window.h" />
+    <ClInclude Include="..\code\headers\component.hpp" />
+    <ClInclude Include="..\code\headers\entity.hpp" />
+    <ClInclude Include="..\code\headers\scene.hpp" />
+    <ClInclude Include="..\code\headers\transform.hpp" />
+    <ClInclude Include="..\code\headers\window.hpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
