--- a/MotorCarlos/Engine/Engine/Engine.vcxproj.filters
+++ b/MotorCarlos/Engine/Engine/Engine.vcxproj.filters
@@ -27,15 +27,24 @@
     <ClCompile Include="..\code\source\entity.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="..\code\headers\transform.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\code\headers\window.h">
+    <ClInclude Include="..\code\headers\window.hpp">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
-    <ClInclude Include="..\code\headers\scene.h">
+    <ClInclude Include="..\code\headers\scene.hpp">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
-    <ClInclude Include="..\code\headers\entity.h">
+    <ClInclude Include="..\code\headers\entity.hpp">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="..\code\headers\component.hpp">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="..\code\headers\transform.hpp">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
