--- a/MotorCarlos/Engine/Engine/Engine.vcxproj
+++ b/MotorCarlos/Engine/Engine/Engine.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClCompile Include="..\code\headers\transform.cpp" />
     <ClCompile Include="..\code\source\entity.cpp" />
+    <ClCompile Include="..\code\source\kernel.cpp" />
     <ClCompile Include="..\code\source\main.cpp" />
     <ClCompile Include="..\code\source\scene.cpp" />
     <ClCompile Include="..\code\source\window.cpp" />
@@ -28,7 +29,11 @@
   <ItemGroup>
     <ClInclude Include="..\code\headers\component.hpp" />
     <ClInclude Include="..\code\headers\entity.hpp" />
+    <ClInclude Include="..\code\headers\kernel.hpp" />
+    <ClInclude Include="..\code\headers\meshComponent.hpp" />
+    <ClInclude Include="..\code\headers\renderComponent.hpp" />
     <ClInclude Include="..\code\headers\scene.hpp" />
+    <ClInclude Include="..\code\headers\task.hpp" />
     <ClInclude Include="..\code\headers\transform.hpp" />
     <ClInclude Include="..\code\headers\window.hpp" />
   </ItemGroup>
