--- a/MotorCarlos/Engine/Engine/Engine.vcxproj
+++ b/MotorCarlos/Engine/Engine/Engine.vcxproj
@@ -24,7 +24,6 @@
     <ClCompile Include="..\code\source\kernel.cpp" />
     <ClCompile Include="..\code\source\main.cpp" />
     <ClCompile Include="..\code\source\scene.cpp" />
-    <ClCompile Include="..\code\source\system.cpp" />
     <ClCompile Include="..\code\source\window.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -33,6 +32,7 @@
     <ClInclude Include="..\code\headers\kernel.hpp" />
     <ClInclude Include="..\code\headers\meshComponent.hpp" />
     <ClInclude Include="..\code\headers\renderComponent.hpp" />
+    <ClInclude Include="..\code\headers\RendererSystem.hpp" />
     <ClInclude Include="..\code\headers\scene.hpp" />
     <ClInclude Include="..\code\headers\system.hpp" />
     <ClInclude Include="..\code\headers\task.hpp" />
