--- a/MotorCarlos/Engine/Engine/Engine.vcxproj
+++ b/MotorCarlos/Engine/Engine/Engine.vcxproj
@@ -25,6 +25,7 @@
     <ClCompile Include="..\code\source\main.cpp" />
     <ClCompile Include="..\code\source\renderSystem.cpp" />
     <ClCompile Include="..\code\source\scene.cpp" />
+    <ClCompile Include="..\code\source\sceneManager.cpp" />
     <ClCompile Include="..\code\source\window.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -35,6 +36,7 @@
     <ClInclude Include="..\code\headers\renderComponent.hpp" />
     <ClInclude Include="..\code\headers\RendererSystem.hpp" />
     <ClInclude Include="..\code\headers\scene.hpp" />
+    <ClInclude Include="..\code\headers\sceneManager.hpp" />
     <ClInclude Include="..\code\headers\system.hpp" />
     <ClInclude Include="..\code\headers\task.hpp" />
     <ClInclude Include="..\code\headers\transform.hpp" />
