--- a/MotorCarlos/Engine/Engine/Engine.vcxproj
+++ b/MotorCarlos/Engine/Engine/Engine.vcxproj
@@ -23,6 +23,7 @@
     <ClCompile Include="..\code\source\entity.cpp" />
     <ClCompile Include="..\code\source\kernel.cpp" />
     <ClCompile Include="..\code\source\main.cpp" />
+    <ClCompile Include="..\code\source\meshComponent.cpp" />
     <ClCompile Include="..\code\source\renderSystem.cpp" />
     <ClCompile Include="..\code\source\scene.cpp" />
     <ClCompile Include="..\code\source\sceneManager.cpp" />
